Adiciona documentação de updateUserRoleRoute
